<resources>
    <string name="app_name">Kalkulator</string>
    <string name="bilangan_1">Bilangan 1</string>
    <string name="bilangan_2">Bilangan 2</string>
    <string name="operasi">Operasi</string>
    <string name="penjumlahan">Penjumlahan</string>
    <string name="pengurangan">Pengurangan</string>
    <string name="perkalian">Perkalian</string>
    <string name="pembagian">Pembagian</string>
    <string name="lakukan_operasi">Lakukan Operasi</string>
</resources>
